# semi-automated-curation

./: .gitignore  .travis.yml  README.md  README.rst  hbp_semi_automated_curation.py  setup.cfg
docs/: index.html
genes/enrichment-0/GSK3B/: GSK3B.bel.tsv  GSK3B_curated.xlsx
genes/enrichment-5/CRH/: CRH.bel.tsv
genes/enrichment-5/CRHR2/: CRHR2.bel.tsv  CRHR2_statements.pkl
genes/enrichment-uncurated/CDKN1B/: CDKN1B.bel.tsv
genes/enrichment-uncurated/PRKCD/: PRKCD.bel.tsv
src/hbp_semi_automated_curation/: __init__.py  __main__.py
src/hbp_semi_automated_curation/curation/CRH/: CRH_statements.pkl
src/hbp_semi_automated_curation/curation/GSK3B/: GSK3B-deduplicated.bel.tsv
src/hbp_semi_automated_curation/curation/MAPT/: MAPT.bel.tsv  MAPT_curated.xlsx
src/hbp_semi_automated_curation/curation/PRKCD/: PRKCD_statements.pkl
