##########################
# Setup.py Configuration #
##########################
[metadata]
name = hbp_semi_automated_curation
version = attr: src.hbp_semi_automated_curation.__init__.VERSION
description = Semi-automated curation for the Human Brain Pharmacome project
long_description = file: README.rst

# URLs
url = https://github.com/pharmacome/semi-automated-curation
download_url = https://github.com/pharmacome/semi-automated-curation/releases
project_urls =
    Bug Tracker = https://github.com/pharmacome/semi-automated-curation/issues

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems Biology
    Networks Biology

[options]
install_requires =
    bel_enrichment>=0.0.3

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hbp-semi-automated-curation = hbp_semi_automated_curation:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120
